# school

./: README.md  package.json  run.bat  tsconfig.json
RayTracing/: .gitignore  RayTracing.sln
RayTracing/OneWeekend/: Makefile  OneWeekend.cpp  OneWeekend.vcxproj  OneWeekend.vcxproj.filters  rtweekend.h  sphere.h
RayTracing/common/: color.h  hittable_list.h  ray.h  vec3.h
VulkanTutorial/: .gitignore  VulkanTutorial.sln  VulkanTutorial.vcxproj  VulkanTutorial.vcxproj.filters  main.cpp
algorithms/: .gitignore  Cargo.toml  README.md  package.json
algorithms/src/: dijkstra.rs  dijkstra.ts  np_states.rs
algorithms/src/common/: helpers.rs  mod.rs
algorithms/src/structs/: DirectedWeightedGraph.ts
dl/: .editorconfig  .gitignore  requirements.txt
dl/src/: keras_mnist.ipynb
ray_tracing/: .gitignore  Cargo.toml  README.md
ray_tracing/assets/: donut.json  monkey.json
ray_tracing/src/: cpu_renderer.rs  gpu_renderer.rs  lib.rs  next_week.rs  one_weekend.rs  one_weekend_vk.glsl  one_weekend_vk.rs  renderer.rs  rest_of_your_life.rs
ray_tracing/src/common/: aabb.rs  arena.rs  attribute.rs  bvh.rs  camera.rs  helpers.rs  hittable.rs  hittable_list.rs  material.rs  meshes.rs  mod.rs  ray.rs  rect.rs  sphere.rs  texture.rs  triangle.rs  vec2.rs  vec3.rs
ray_tracing/src/shaders/: one_weekend.glsl  one_weekend_vk.glsl
ray_tracing/src/shaders/common/: base.glsl  calculate_ray.glsl  calculate_uv.glsl  hit_triangle.glsl
src/: triangle.ts
vulkan/: .editorconfig  .gitignore  README.md  package.json  tsconfig.json
vulkan/src/: triangle.ts
webgpu_tutorial/: Cargo.toml
webgpu_tutorial/src/: main.rs  shader.wgsl
xr/: .eslintrc.json  .firebaserc  package.json  tsconfig.json  webpack.config.ts
xr/src/: index.ts
xr/src/common/: BoxLineGeometries.ts  VRButton.ts
xr/src/demo/: VRBallDemo.ts  demoARBall.ts  demoVRBall.ts  demoWebGPU.ts
xr/src/demo/shaders/: triangle.vert.wgsl
xr/src/styles/: reset.ts  style.ts
