[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["lvinnichenko <lvinnichenko@aligntech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.23.13"
rand="0.8.3"

[[bin]]
name = "one_weekend"
path = "src/one_weekend.rs"
