[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["lvinnichenko <lvinnichenko@aligntech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
precise = []

[dependencies]
image = "0.23.13"
rand = "0.8.3"
rayon = "1.5.0"
generational-arena = "0.2"
partial-min-max = "0.4.0"

[[bin]]
name = "one_weekend"
path = "src/one_weekend.rs"
