[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["lvinnichenko <lvinnichenko@aligntech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
precise = []

[dependencies]
image = "0.23.13"
rand = "0.8.3"
rayon = "1.5.0"
partial-min-max = "0.4.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.59"
vulkano = "0.23.0"
vulkano-shaders = "0.23.0"
nalgebra = "0.26.2"

[[bin]]
name = "one_weekend"
path = "src/one_weekend.rs"

[[bin]]
name = "next_week"
path = "src/next_week.rs"

[[bin]]
name = "next_week_cornell_box"
path = "src/next_week_cornell_box.rs"

[[bin]]
name = "one_weekend_vk"
path = "src/one_weekend_vk.rs"
